ainda tem muita coisa pra adicionar, vou adicionando aos poucos, mas só pra entregar

--- a/index.html
+++ b/index.html
@@ -22,9 +22,25 @@
             <img src="./images/Ada-WomenThatDid.jpg" alt="Ada Lovelace">
         </div>
         <h2 class="text1">Mulher / Matemática / Programadora</h2>
-        <div class="responsive">
-            <h2>Introdução</h2>
+        <div class="textada">
+            <h2>INTRODUÇÃO</h2>
         </div>
     </header>
+    <main>
+        <div class="battle-line"></div>
+        <div class="battle-txt">
+
+            <span> A matemática, escritora e condessa, Augusta Ada Byron King</span>
+            <span>— mais conhecida como Ada Lovelace — é a primeira programadora</span>
+            <span>do mundo. Ela é responsável pelo primeiro algoritmo que foi usado </span>
+            <span>por uma calculadora chamada de Máquina Analítica, o mais próximo</span>
+            <span>do que seria um computador no começo do século XIX.</span>
+
+        </div>
+        <section class="section1">
+            <figure class="ada">
+                <img src="./images/1200px-Ada_Lovelace_color.svg.png" alt="ada png">
+            </figure>
+    </main>
 </body>
 </html>
