tem algo errado com os tamanhos e eu não sei o que é

--- a/index.html
+++ b/index.html
@@ -9,38 +9,67 @@
 </head>
 <body>
     <header>
-        <h1>Ada Lovelace</h1>
-        <nav>
-            <ul>
-                <li>Conquistas</li>
-                <li>Wikipédia</li>
-                <li>Bibliografia</li>
-                <li>Dev</li>
-            </ul>
-        </nav>
-        <div class="introduction">
-            <img src="./images/Ada-WomenThatDid.jpg" alt="Ada Lovelace">
-        </div>
-        <h2 class="text1">Mulher / Matemática / Programadora</h2>
-        <div class="textada">
-            <h2>INTRODUÇÃO</h2>
-        </div>
+        <h1 class='titulo'>Ada Lovelace</h1>
+        <nav class="menu">
+                <ul class="start">
+                    <a href="./Achievements.html"><li class ="decima">ACHIEVEMENTS</li></a>
+                    <a href="./Source.html"><li class ="decima">SOURCE</li></a>
+                    <a href="https://en.wikipedia.org/wiki/Ada_Lovelace"><li class ="decima">WIKI</li></a>
+                    <a href="https://www.instagram.com/dandaraaryadne/"><li class ="decima">DEV</li></a>
+                  </ul>
+                </div>
+              </nav>
+              <div class="introduction">
+                <img src="./images/Ada_Lovelace_Day_web.png" alt="Ada Lovelace">
+            </div> 
+        </section>
     </header>
     <main>
-        <div class="battle-line"></div>
-        <div class="battle-txt">
+        <div class="textada">
+            <h2 class='textmain'>INTRODUÇÃO</h2>
+        </div>  
+        <section class="texthome">
 
-            <span> A matemática, escritora e condessa, Augusta Ada Byron King</span>
-            <span>— mais conhecida como Ada Lovelace — é a primeira programadora</span>
-            <span>do mundo. Ela é responsável pelo primeiro algoritmo que foi usado </span>
-            <span>por uma calculadora chamada de Máquina Analítica, o mais próximo</span>
-            <span>do que seria um computador no começo do século XIX.</span>
-
-        </div>
-        <section class="section1">
-            <figure class="ada">
-                <img src="./images/1200px-Ada_Lovelace_color.svg.png" alt="ada png">
-            </figure>
+            <p> A matemática, escritora e condessa, Augusta Ada Byron King — mais conhecida como Ada Lovelace 
+            — é a primeira programadora do mundo. Ela é responsável pelo primeiro algoritmo que foi usado 
+            por uma calculadora chamada de Máquina Analítica, o mais próximo
+            do que seria um computador no começo do século XIX.</p>
+            <p>Ada Byron é filha do ilustre poeta britânico Lord Byron. Ela nasceu em Londres, Reino Unido, 
+                no dia 10 de dezembro de 1815 e morreu em novembro de 1852, ainda muito jovem, aos 36 anos. 
+                Embora o trabalho de Ada faça parte da história da ciência e da tecnologia, seu pai nunca 
+                teve a oportunidade de reconhecer a importância de sua filha. Um mês após o nascimento de 
+                Ada, Lord Byron terminou o relacionamento com a mãe da menina, Anabella, a Lady Byron, e 
+                se mudou para a Grécia. Quando Lord Byron morreu, Ada tinha oito anos.</p>
+            </section>
+            <section class='enfeite'>
+            <div class='bloquinhos1'></div>
+            <div class='bloquinhos2'></div>
+            <div class='bloquinhos3'></div>
+            <div class="back-img"></div>
+            </section>
+                <section class="red-section">
+                 <div class="red-box">
+                 <div class="red-content">
+                             <p class='content1'>Legacy</p>
+                         </div>
+                         <nav class="red-button">
+                             <button> <a href="https://www.youtube.com/watch?v=v_YozYt8l-g" target="blank"> DOWNLOAD</button></a>
+                         </nav>
+                         <div class="red-footer">
+                             <p>10/07/2020 last update</p>
+                         </div>
+                     </div>
+            <section class="slide">
+            <ul class="slideshow">
+                <li><span></span></li>
+                <li><span>2</span></li>
+                <li><span></span></li>
+            </ul>
+            </section>
+        <section class= "partedebaixo"></section>
     </main>
+    <footer>
+        desenvolvido por Dandara Aryadne
+    </footer>
 </body>
 </html>
