--- a/index.html
+++ b/index.html
@@ -8,45 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1 class='titulo'>Ada Lovelace</h1>
+    <header class="cabeca">
+        <div class="titulo">
+            <h1>Ada Lovelace</h1>  
+        </div>
         <nav class="menu">
-                <ul class="start">
-                    <a href="./Achievements.html"><li class ="decima">ACHIEVEMENTS</li></a>
-                    <a href="./Source.html"><li class ="decima">SOURCE</li></a>
-                    <a href="https://en.wikipedia.org/wiki/Ada_Lovelace"><li class ="decima">WIKI</li></a>
-                    <a href="https://www.instagram.com/dandaraaryadne/"><li class ="decima">DEV</li></a>
+                <ul class="van">
+                    <a href="#"><li>HOME</li></a>
+                    <a href="./Achievements.html"><li>ACHIEVEMENTS</li></a>
+                    <a href="./Source.html"><li>SOURCE</li></a>
+                    <a href="https://en.wikipedia.org/wiki/Ada_Lovelace"><li>WIKI</li></a>
+                    <a href="https://www.instagram.com/dandaraaryadne/"><li>DEV</li></a>
                   </ul>
                 </div>
               </nav>
               <div class="introduction">
-                <img src="./images/Ada_Lovelace_Day_web.png" alt="Ada Lovelace">
+                <img src="#" alt="#">
             </div> 
         </section>
     </header>
-    <main>
+    <main class="corpo">
         <div class="textada">
             <h2 class='textmain'>INTRODUÇÃO</h2>
-        </div>  
-        <section class="texthome">
-
-            <p> A matemática, escritora e condessa, Augusta Ada Byron King — mais conhecida como Ada Lovelace 
-            — é a primeira programadora do mundo. Ela é responsável pelo primeiro algoritmo que foi usado 
-            por uma calculadora chamada de Máquina Analítica, o mais próximo
-            do que seria um computador no começo do século XIX.</p>
-            <p>Ada Byron é filha do ilustre poeta britânico Lord Byron. Ela nasceu em Londres, Reino Unido, 
-                no dia 10 de dezembro de 1815 e morreu em novembro de 1852, ainda muito jovem, aos 36 anos. 
-                Embora o trabalho de Ada faça parte da história da ciência e da tecnologia, seu pai nunca 
-                teve a oportunidade de reconhecer a importância de sua filha. Um mês após o nascimento de 
-                Ada, Lord Byron terminou o relacionamento com a mãe da menina, Anabella, a Lady Byron, e 
-                se mudou para a Grécia. Quando Lord Byron morreu, Ada tinha oito anos.</p>
-            </section>
-            <section class='enfeite'>
-            <div class='bloquinhos1'></div>
-            <div class='bloquinhos2'></div>
-            <div class='bloquinhos3'></div>
-            <div class="back-img"></div>
-            </section>
+        </div>
                 <section class="red-section">
                  <div class="red-box">
                  <div class="red-content">
@@ -62,14 +46,25 @@
             <section class="slide">
             <ul class="slideshow">
                 <li><span></span></li>
-                <li><span>2</span></li>
+                <li><span></span></li>
                 <li><span></span></li>
             </ul>
             </section>
         <section class= "partedebaixo"></section>
     </main>
     <footer>
-        desenvolvido por Dandara Aryadne
+        <section class="footer-main">
+            <div class="redes-sociais">
+                <a href="https://twitter.com/windflorest"><img src="./images/twitter.jpg" alt="Logo do Twitter"></a>
+                <a href="https://www.instagram.com/vainaweb/"><img src="./images/instagram.jpg" alt="Logo do Instagram"></a>
+                <a href="https://www.youtube.com/watch?v=1QQ3gWmd20s"><img src="./images/youtube.crop.jpg" alt="Logo do Youtube"></a> 
+            </div>
+                <h2>Copyrigth</h2>
+            <div class="ref">
+                <p>Dandara Aryadne </p>
+                <p>Referência: Estudo e layouts de HTMl e CSS</p>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
