acertei a header, acertei a imagem de fundo e agora vamos para a main

--- a/index.html
+++ b/index.html
@@ -8,29 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabeca">
-        <div class="titulo">
-            <h1>Ada Lovelace</h1>  
-        </div>
-        <nav class="menu">
-                <ul class="van">
-                    <a href="#"><li>HOME</li></a>
-                    <a href="./Achievements.html"><li>ACHIEVEMENTS</li></a>
-                    <a href="./Source.html"><li>SOURCE</li></a>
-                    <a href="https://en.wikipedia.org/wiki/Ada_Lovelace"><li>WIKI</li></a>
-                    <a href="https://www.instagram.com/dandaraaryadne/"><li>DEV</li></a>
-                  </ul>
-                </div>
-              </nav>
-              <div class="introduction">
-                <img src="#" alt="#">
-            </div> 
-        </section>
+    <header>
+        <h1 class="title"><strong>ADA LOVELACE</strong></h1>
+        <nav>
+            <ul>
+                <a href="#"><li>HOME</li></a>
+                <a href="./Achievements.html"><li>ACHIEVEMENTS</li></a>
+                <a href="./Source.html"><li>SOURCE</li></a>
+                <a href="https://en.wikipedia.org/wiki/Ada_Lovelace"><li>WIKI</li></a>
+                <a href="https://www.instagram.com/dandaraaryadne/"><li>DEV</li></a>
+            </ul>
+        </nav>
     </header>
+    <figure class="introduction">
+        <img src="./images/header.png" alt="Ada Lovelace"> 
+    </figure>
     <main class="corpo">
-        <div class="textada">
-            <h2 class='textmain'>INTRODUÇÃO</h2>
-        </div>
+        <section class="aquarela">
+            <h2 class="titlemain">INTRODUCTION</h2>
+            <p class="textmain">
+                When Ada was twelve years old, this future "Lady Fairy", as Charles Babbage affectionately called her, decided she wanted to fly. Ada Byron went about the project methodically, thoughtfully, with imagination and passion. Her first step, in February 1828, was to construct wings. She investigated different material and sizes. She considered various materials for the wings: paper, oilsilk, wires, and feathers. She examined the anatomy of birds to determine the right proportion between the wings and the body. She decided to write a book, Flyology, illustrating, with plates, some of her findings. She decided what equipment she would need; for example, a compass, to "cut across the country by the most direct road", so that she could surmount mountains, rivers, and valleys. Her final step was to integrate steam with the "art of flying".
+            </p>
+          </section>
                 <section class="red-section">
                  <div class="red-box">
                  <div class="red-content">
