finalmente acertei o slide e a posição do texto! Agora é ajustar a parte de baixo.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <figure class="introduction">
         <img src="./images/header.png" alt="Ada Lovelace"> 
     </figure>
-    <main class="corpo">
+    <main>
         <section class="aquarela">
             <h2 class="titlemain">INTRODUCTION</h2>
             <p class="textmain">
@@ -31,15 +31,12 @@
             </p>
           </section>
                 <section class="red-section">
+                <div class="bloquinho1"></div>
+                <div class="bloquinho2"></div>
+                <div class="bloquinho3"></div>
                  <div class="red-box">
                  <div class="red-content">
-                             <p class='content1'>Legacy</p>
-                         </div>
-                         <nav class="red-button">
-                             <button> <a href="https://www.youtube.com/watch?v=v_YozYt8l-g" target="blank"> DOWNLOAD</button></a>
-                         </nav>
-                         <div class="red-footer">
-                             <p>10/07/2020 last update</p>
+                             <p class='glow'>Legacy</p>
                          </div>
                      </div>
             <section class="slide">
@@ -49,21 +46,32 @@
                 <li><span></span></li>
             </ul>
             </section>
-        <section class= "partedebaixo"></section>
+        <section class= "partedebaixo">
+            <ul class="slideshow">
+              <li><span></span></li>
+              <li><span></span></li>
+              <li><span></span></li>
+              <li><span></span></li>
+              <li><span></span></li>
+            </ul>
+            <p class="textunder">
+                When Ada was twelve years old, this future "Lady Fairy", as Charles Babbage affectionately called her, decided she wanted to fly. Ada Byron went about the project methodically, thoughtfully, with imagination and passion. Her first step, in February 1828, was to construct wings. She investigated different material and sizes. She considered various materials for the wings: paper, oilsilk, wires, and feathers. She examined the anatomy of birds to determine the right proportion between the wings and the body. She decided to write a book, Flyology, illustrating, with plates, some of her findings. She decided what equipment she would need; for example, a compass, to "cut across the country by the most direct road", so that she could surmount mountains, rivers, and valleys. Her final step was to integrate steam with the "art of flying".
+            </p>
+        </section>
     </main>
     <footer>
-        <section class="footer-main">
-            <div class="redes-sociais">
-                <a href="https://twitter.com/windflorest"><img src="./images/twitter.jpg" alt="Logo do Twitter"></a>
-                <a href="https://www.instagram.com/vainaweb/"><img src="./images/instagram.jpg" alt="Logo do Instagram"></a>
-                <a href="https://www.youtube.com/watch?v=1QQ3gWmd20s"><img src="./images/youtube.crop.jpg" alt="Logo do Youtube"></a> 
-            </div>
-                <h2>Copyrigth</h2>
-            <div class="ref">
-                <p>Dandara Aryadne </p>
-                <p>Referência: Estudo e layouts de HTMl e CSS</p>
-            </div>
-        </section>
+        <div class="icons">
+            <img src="imagens/facebook icons.com_65484.png" alt="facebook">
+            <img src="imagens/TWITTER_icon-icons.com_65486.png" alt="twitter">
+            <img src="imagens/icon insta.png" alt="instagram">
+            <img src="imagens/icon telegram.png" alt="telegram">
+            <img src="imagens/icon zap.png" alt="whatsapp">
+            <img src="imagens/YOUTUBE_icon-icons.com_65487.png" alt="youtube">
+        </div>
+        <div class="text2">
+            <h2 class="copyright"><strong>Copyright</strong></h2>
+            <p>Layout Produzido Por Vai Na Web Para Fins Exclusivamente Educacionais.</p>
+        </div>
     </footer>
 </body>
 </html>
