desktop versão pronta, falta responsivo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="https://www.instagram.com/dandaraaryadne/"><li>DEV</li></a>
             </ul>
         </nav>
+    </div>
     </header>
     <figure class="introduction">
         <img src="./images/header.png" alt="Ada Lovelace"> 
@@ -54,23 +55,31 @@
               <li><span></span></li>
               <li><span></span></li>
             </ul>
-            <p class="textunder">
-                When Ada was twelve years old, this future "Lady Fairy", as Charles Babbage affectionately called her, decided she wanted to fly. Ada Byron went about the project methodically, thoughtfully, with imagination and passion. Her first step, in February 1828, was to construct wings. She investigated different material and sizes. She considered various materials for the wings: paper, oilsilk, wires, and feathers. She examined the anatomy of birds to determine the right proportion between the wings and the body. She decided to write a book, Flyology, illustrating, with plates, some of her findings. She decided what equipment she would need; for example, a compass, to "cut across the country by the most direct road", so that she could surmount mountains, rivers, and valleys. Her final step was to integrate steam with the "art of flying".
-            </p>
+            <div class="textunder">
+                <span>Around the age of 17, Ada met Charles Babbage, a mathematician and inventor. The pair became friends, and the much older Babbage served as a mentor to Lovelace. Through Babbage, Lovelace began studying advanced mathematics with University of London professor Augustus de Morgan.</span>
+                <span>Lovelace was fascinated by Babbage's ideas. Known as the father of the computer, he invented the difference engine, which was meant to perform mathematical calculations.</span>
+                <span>Lovelace got a chance to look at the machine before it was finished, and was captivated by it. Babbage also created plans for another device known as the analytical engine, designed to handle more complex calculations.</span>
+                <span>Lovelace was later asked to translate an article on Babbage's analytical engine that had been written by Italian engineer Luigi Federico Menabrea for a Swiss journal.</span>
+                <span>She not only translated the original French text into English but also added her own thoughts and ideas on the machine.</span>
+                <span>Her notes ended up being three times longer than the original article. Her work was published in 1843, in an English science journal.</span>
+                <span>In her notes, Lovelace described how codes could be created for the device to handle letters and symbols along with numbers.</span>
+                <span>She also theorized a method for the engine to repeat a series of instructions, a process known as looping that computer programs use today.</span>
+                <span>Lovelace also offered up other forward-thinking concepts in the article. For her work, Lovelace is often considered to be the first computer programmer.</span>
+            </div>
+            
         </section>
     </main>
     <footer>
         <div class="icons">
-            <img src="imagens/facebook icons.com_65484.png" alt="facebook">
-            <img src="imagens/TWITTER_icon-icons.com_65486.png" alt="twitter">
-            <img src="imagens/icon insta.png" alt="instagram">
-            <img src="imagens/icon telegram.png" alt="telegram">
-            <img src="imagens/icon zap.png" alt="whatsapp">
-            <img src="imagens/YOUTUBE_icon-icons.com_65487.png" alt="youtube">
+            <a href="https://medium.com/@dandaraaryadne"><img src="./images/medium.png" alt="medium"></a>
+            <a href="https://open.spotify.com/user/22odtnta7sf44yewyxdoqpjcq"><img src="./images/spotfy.png" alt="spotify"></a>
+            <a href="https://www.instagram.com/cinemaatm/"><img src="./images/dev.png" alt="instagram"></a>
+            <a href="https://github.com/Dandara-Aryadne"><img src="./images/git.png" alt="gitHub"></a>
+            <a href="https://www.linkedin.com/in/dandara-aryadne-jesus-ferreira-15362b130/"><img src="./images/linkedin.png" alt="linkedin"></a>
         </div>
         <div class="text2">
             <h2 class="copyright"><strong>Copyright</strong></h2>
-            <p>Layout Produzido Por Vai Na Web Para Fins Exclusivamente Educacionais.</p>
+            <p>Dandara Aryadne - Fins educacionais</p>
         </div>
     </footer>
 </body>
