estilizando a outra página

--- a/source.html
+++ b/source.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ada Lovelace</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <header>
@@ -14,32 +14,18 @@
             <ul>
                 <a href="#"><li>HOME</li></a>
                 <a href="https://scientificwomen.net/women/lovelace-ada-59#:~:text=She%20was%20the%20first%20to,and%20the%20first%20computer%20programmer." target="_blank"><li>ACHIEVEMENTS</li></a>
-                <a href="./source.html" target="_blank"><li>SOURCE</li></a>
+                <a href="./Source.html" target="_blank"><li>SOURCE</li></a>
                 <a href="https://en.wikipedia.org/wiki/Ada_Lovelace" target="_blank"><li>WIKI</li></a>
                 <a href="https://www.instagram.com/dandaraaryadne/" target="_blank"><li>DEV</li></a>
             </ul>
         </nav>
     </div>
     </header>
-    <figure class="introduction">
-        <img src="./images/header.png" alt="Ada Lovelace"> 
-    </figure>
     <main>
         <section class="aquarela">
-            <h2 class="titlemain">INTRODUCTION</h2>
-            <p class="textmain">
-                When Ada was twelve years old, this future "Lady Fairy", as Charles Babbage affectionately called her, decided she wanted to fly. Ada Byron went about the project methodically, thoughtfully, with imagination and passion. Her first step, in February 1828, was to construct wings. She investigated different material and sizes. She considered various materials for the wings: paper, oilsilk, wires, and feathers. She examined the anatomy of birds to determine the right proportion between the wings and the body. She decided to write a book, Flyology, illustrating, with plates, some of her findings. She decided what equipment she would need; for example, a compass, to "cut across the country by the most direct road", so that she could surmount mountains, rivers, and valleys. Her final step was to integrate steam with the "art of flying".
-            </p>
-          </section>
-                <section class="red-section">
-                <div class="bloquinho1"></div>
-                <div class="bloquinho2"></div>
-                <div class="bloquinho3"></div>
-                 <div class="red-box">
-                 <div class="red-content">
-                             <p class='glow'>Legacy</p>
-                         </div>
-                     </div>
+            <h2 class="titlemain">SOURCE</h2>
+            <h3 class="textmain">Lista de videos sobre Ada:</h3>
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/1QQ3gWmd20s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <section class="slide">
             <ul class="slideshow">
                 <li><span></span></li>
